--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,27 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true,
-    "node": true
-  },
-  "extends": "standard-with-typescript",
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
-  "plugins": ["@typescript-eslint"],
-  "ignorePatterns": ["**/build/*", "**/node_modules/*", "**/public/*"],
-  "rules": {}
+    "env": {
+        "browser": true,
+        "es2021": true,
+        "node": true
+    },
+    "extends": ["standard-with-typescript", "prettier"],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module",
+        "project": ["**/tsconfig.json"]
+    },
+    "plugins": ["@typescript-eslint"],
+    "ignorePatterns": ["**/build/*", "**/node_modules/*", "**/public/*", "**/tsconfig.json"],
+    "rules": {
+        "@typescript-eslint/restrict-template-expressions": "off",
+        "indent": ["error", 4]
+        // "indent": [2, "tab"],
+        // "no-tabs": ["error", { "allowIndentationTabs": true }],
+        // "indent": "off",
+        // "@typescript-eslint/indent": "error"
+        // "indent": ["error", { "allowIndentationTabs": true }],
+        // "indent": "off",
+        // "@typescript-eslint/indent": "error"
+    }
 }
