--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,9 @@
 {
-  "arrowParens": "always",
-  "printWidth": 120,
-  "semi": false,
-  "singleQuote": true,
-  "trailingComma": "none"
+    "arrowParens": "always",
+    "printWidth": 120,
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "none",
+    "useTabs": false,
+    "tabWidth": 4
 }
