--- a/package.json
+++ b/package.json
@@ -10,23 +10,23 @@
         "format": "prettier --write .",
         "prepare": "husky install",
         "check-types": "tsc --pretty --noEmit",
-        "check-format" : "prettier --check .",
-        "check-lint" : "eslint . --ext ts --ext tsx --ext js"
+        "check-format": "prettier --check .",
+        "check-lint": "eslint . --ext ts --ext tsx --ext js"
     },
-    "husky" : {
+    "husky": {
         "hooks": {
-            "pre-commit" : "npx pretty-quick --staged ng lint ng test",
-            "pre-push" : "ng build --aot true"
+            "pre-commit": "npx pretty-quick --staged ng lint ng test",
+            "pre-push": "ng build --aot true"
         }
     },
     "author": "Faisal Achmad Dwi Cahyono",
     "license": "ISC",
     "devDependencies": {
         "@types/express": "^4.17.17",
-        "@types/node": "^20.5.4",
         "@typescript-eslint/eslint-plugin": "^6.4.1",
         "@typescript-eslint/parser": "^6.4.1",
         "eslint": "^8.47.0",
+        "eslint-config-prettier": "^9.0.0",
         "eslint-config-standard": "^17.1.0",
         "eslint-config-standard-with-typescript": "^38.0.0",
         "eslint-plugin-import": "^2.28.1",
