--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,10 @@
     "ignorePatterns": ["**/build/*", "**/node_modules/*", "**/public/*", "**/tsconfig.json"],
     "rules": {
         "@typescript-eslint/restrict-template-expressions": "off",
+        "@typescript-eslint/explicit-function-return-type": "off",
+        "@typescript-eslint/eslint-disable-next-line": "off",
+        "@typescript-eslint/strict-boolean-expressions": "off",
+        "no-return-assign": "off",
         "indent": ["error", 4]
         // "indent": [2, "tab"],
         // "no-tabs": ["error", { "allowIndentationTabs": true }],
