--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "author": "Faisal Achmad Dwi Cahyono",
     "license": "ISC",
     "devDependencies": {
+        "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
         "@typescript-eslint/eslint-plugin": "^6.4.1",
         "@typescript-eslint/parser": "^6.4.1",
@@ -41,7 +42,13 @@
         "typescript": "^5.1.6"
     },
     "dependencies": {
+        "body-parser": "^1.20.2",
+        "cors": "^2.8.5",
         "express": "^4.18.2",
-        "nodemon": "^3.0.1"
+        "joi": "^17.9.2",
+        "moment": "^2.29.4",
+        "nodemon": "^3.0.1",
+        "pino": "^8.15.0",
+        "pino-pretty": "^10.2.0"
     }
 }
