--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
         "express": "^4.18.2",
         "joi": "^17.9.2",
         "moment": "^2.29.4",
+        "mongodb": "^5.8.1",
+        "mongoose": "^7.4.4",
         "nodemon": "^3.0.1",
         "pino": "^8.15.0",
         "pino-pretty": "^10.2.0"
