Penembahan Product Service, Product Type, Product Controller

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DB=mongodb+srv://faisalahmaddwicahyono:<fzQAD2ji6VL3GuZp>@cluster0.tn4s42d.mongodb.net/rest-api?retryWrites=true&w=majority
-
+# DB=mongodb+srv://faisalahmaddwicahyono:UnpO1bPpiuGcUe4O@cluster0.hkfa3tk.mongodb.net/web?retryWrites=true&w=majority
+DB=mongodb://admin:admin@localhost:8080/web?authSource=admin
