--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,9 @@
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/eslint-disable-next-line": "off",
         "@typescript-eslint/strict-boolean-expressions": "off",
+        "@typescript-eslint/no-confusing-void-expression": "off",
+        "@typescript-eslint/no-misused-promises": "off",
+        "@typescript-eslint/ban-types": "off",
         "no-return-assign": "off",
         "indent": ["error", 4]
         // "indent": [2, "tab"],
