--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "devDependencies": {
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
+        "@types/uuid": "^9.0.2",
         "@typescript-eslint/eslint-plugin": "^6.4.1",
         "@typescript-eslint/parser": "^6.4.1",
         "eslint": "^8.47.0",
@@ -44,13 +45,14 @@
     "dependencies": {
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "joi": "^17.9.2",
         "moment": "^2.29.4",
-        "mongodb": "^5.8.1",
         "mongoose": "^7.4.4",
         "nodemon": "^3.0.1",
         "pino": "^8.15.0",
-        "pino-pretty": "^10.2.0"
+        "pino-pretty": "^10.2.0",
+        "uuid": "^9.0.0"
     }
 }
