--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "author": "Faisal Achmad Dwi Cahyono",
     "license": "ISC",
     "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
+        "@types/jsonwebtoken": "^9.0.2",
         "@types/uuid": "^9.0.2",
         "@typescript-eslint/eslint-plugin": "^6.4.1",
         "@typescript-eslint/parser": "^6.4.1",
+        "bcrypt": "^5.1.1",
         "eslint": "^8.47.0",
         "eslint-config-prettier": "^9.0.0",
         "eslint-config-standard": "^17.1.0",
@@ -48,6 +51,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "joi": "^17.9.2",
+        "jsonwebtoken": "^9.0.2",
         "moment": "^2.29.4",
         "mongoose": "^7.4.4",
         "nodemon": "^3.0.1",
