--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,10 +9,11 @@
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module",
+        // "project": ["**/tsconfig.json"],
         "project": ["**/tsconfig.json"]
     },
     "plugins": ["@typescript-eslint"],
-    "ignorePatterns": ["**/build/*", "**/node_modules/*", "**/public/*", "**/tsconfig.json"],
+    "ignorePatterns": ["**/build/*", "**/node_modules/*", "**/public/*", "**/tsconfig.json", "**/jest.config.js"],
     "rules": {
         "@typescript-eslint/restrict-template-expressions": "off",
         "@typescript-eslint/explicit-function-return-type": "off",
