--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
         "prepare": "husky install",
         "check-types": "tsc --pretty --noEmit",
         "check-format": "prettier --check .",
-        "check-lint": "eslint . --ext ts --ext tsx --ext js"
+        "check-lint": "eslint . --ext ts --ext tsx --ext js",
+        "test": "jest --detectOpenHandles"
     },
     "husky": {
         "hooks": {
@@ -25,7 +26,10 @@
         "@types/bcrypt": "^5.0.0",
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
+        "@types/jest": "^29.5.4",
         "@types/jsonwebtoken": "^9.0.2",
+        "@types/node": "^20.5.7",
+        "@types/supertest": "^2.0.12",
         "@types/uuid": "^9.0.2",
         "@typescript-eslint/eslint-plugin": "^6.4.1",
         "@typescript-eslint/parser": "^6.4.1",
@@ -40,8 +44,12 @@
         "eslint-plugin-promise": "^6.1.1",
         "eslint-plugin-standard": "^5.0.0",
         "husky": "^8.0.3",
+        "jest": "^29.6.4",
+        "mongodb-memory-server": "^8.15.1",
         "prettier": "3.0.2",
         "pretty-quick": "^3.1.3",
+        "supertest": "^6.3.3",
+        "ts-jest": "^29.1.1",
         "ts-node": "^10.9.1",
         "typescript": "^5.1.6"
     },
