--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DB=mongodb+srv://faisalahmaddwicahyono:UnpO1bPpiuGcUe4O@cluster0.hkfa3tk.mongodb.net/web?retryWrites=true&w=majority
-# DB=mongodb://admin:admin@localhost:8080/web?authSource=admin
+# DB=mongodb+srv://faisalahmaddwicahyono:UnpO1bPpiuGcUe4O@cluster0.hkfa3tk.mongodb.net/web?retryWrites=true&w=majority
+DB=mongodb://admin:admin@localhost:8080/web?authSource=admin
 
 # LINK = https://tutorial-rest-api-node-typescript-haz9-glxvos76q.vercel.app/?vercelToolbarCode=RwEO4WFnfY5Opyd
