--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,6 @@
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module",
-        // "project": ["**/tsconfig.json"],
         "project": ["**/tsconfig.json"]
     },
     "plugins": ["@typescript-eslint"],
@@ -22,6 +21,7 @@
         "@typescript-eslint/no-confusing-void-expression": "off",
         "@typescript-eslint/no-misused-promises": "off",
         "@typescript-eslint/ban-types": "off",
+        "@types/testing-library_jest-dom": "off",
         "no-return-assign": "off",
         "indent": ["error", 4]
         // "indent": [2, "tab"],
