--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "check-types": "tsc --pretty --noEmit",
         "check-format": "prettier --check .",
         "check-lint": "eslint . --ext ts --ext tsx --ext js",
-        "test": "jest --detectOpenHandles"
+        "test": "jest --detectOpenHandles",
+        "test-watch": "jest --detectOpenHandles --watchAll"
     },
     "husky": {
         "hooks": {
@@ -26,6 +27,7 @@
         "@types/bcrypt": "^5.0.0",
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
+        "@types/jasmine": "^4.3.5",
         "@types/jest": "^29.5.4",
         "@types/jsonwebtoken": "^9.0.2",
         "@types/node": "^20.5.7",
@@ -42,7 +44,6 @@
         "eslint-plugin-n": "^16.0.2",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^6.1.1",
-        "eslint-plugin-standard": "^5.0.0",
         "husky": "^8.0.3",
         "jest": "^29.6.4",
         "mongodb-memory-server": "^8.15.1",
@@ -51,7 +52,7 @@
         "supertest": "^6.3.3",
         "ts-jest": "^29.1.1",
         "ts-node": "^10.9.1",
-        "typescript": "^5.1.6"
+        "typescript": "^5.2.2"
     },
     "dependencies": {
         "body-parser": "^1.20.2",
